# localllmapi-streamlit

./: .gitignore  app.py  pyproject.toml
navigation/: __init__.py  chat.py  login.py  message_utils.py  ollama_client.py  settings.py
